# rugved_description

./: README.md
rugved_description/: CMakeLists.txt  package.xml
rugved_description/config/: joint_names_rugved_description.yaml
rugved_description/launch/: display.launch  gazebo.launch
rugved_description/meshes/: base_link.STL  castor_cover.STL  castor_wheel.STL  left_wheel.STL  right_wheel.STL
rugved_description/rviz/: urdf.rviz
rugved_description/urdf/: rugved_description.urdf
