<package>
  <name>rugved_description</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for rugved_description</p>
    <p>This package contains configuration data, 3D models and launch files
for rugved_description robot</p>
  </description>
  <author>me</author>
  <maintainer email="manushree635@gamil.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>diff_drive_controller</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>rqt_robot_steering</run_depend>
  <run_depend>position_controllers</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>gazebo</run_depend>
  <export>
    <architecture_independent />
  </export>
</package>
